--- a/responsive.css
+++ b/responsive.css
@@ -17,5 +17,20 @@
     font-size:40px;
   }
 
+  .header-input-btn{
+    width:100%;
+  }
+
+  #select,.fa-btn,input{
+    width:100%;
+    margin:5px auto;
+  }
+
 
 }
+
+
+
+
+
+    
