image issu fix here

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ section{
     width:90%;
     margin:0px auto;
     padding:50px 10px;
-    background:linear-gradient(45deg,rgba(27, 7, 31, 0.397),rgba(30, 7, 49, 0.432)),url(Images/Group\ 13\ \(1\)\ \(1\).png);
+    background:linear-gradient(45deg,rgba(27, 7, 31, 0.397),rgba(30, 7, 49, 0.432)),url(images/group1.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
